<resources>
    <string name="view_dialer_2_under_txt">ABC</string>
    <string name="view_dialer_3_under_txt">DEF</string>
    <string name="view_dialer_4_under_txt">GHI</string>
    <string name="view_dialer_5_under_txt">JKL</string>
    <string name="view_dialer_6_under_txt">MNO</string>
    <string name="view_dialer_7_under_txt">PQRS</string>
    <string name="view_dialer_8_under_txt">TUV</string>
    <string name="view_dialer_9_under_txt">WXYZ</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="tool_tip_service_fee_body"><![CDATA[The service fee goes toward helping us pay couriers, provide quality customer support & logistics, process payments, and other costs associated with running our service.]]></string>
    <string name="tool_tip_service_fee_title">Service fee</string>
    <string name="tool_tip_ssn_body"><![CDATA[We require the last 4 digits of your Social Security Number to verify your payment account. We don\'t hold this information, it\'s transferred automatically to Stripe (our payment system)]]></string>
    <string name="tool_tip_profile_flag_body">The flag will be shown next to your profile picture in the platform. That should be a representative of your cooking, culture, cuisine, and personality :)</string>
    <string name="tool_tip_ssn_title">Social security number</string>
    <string name="tool_tip_profile_flag_title">State your profile flag</string>
    <string name="order_view_cancel_order"><u>Cancel order</u></string>

    <string name="support_frag_sms_sentence">""</string>


    <string name="welcome_fragment_login_btn">Get started</string>

    <string name="phone_verification_fragment_next_btn">Next</string>

    <string name="code_fragment_help">Haven’t received the code?</string>
    <string name="code_fragment_next_btn">Next</string>

    <string name="country_chooser_title">Choose country</string>

    <string name="phone_verification_fragment_phone_error">Please enter a valid phone</string>
    <string name="default_notification_channel_id">woodspoonchefs</string>
    <string name="tooltip_birthdate">Your birthdate will not be shown on your profile; this is to verify your bank account info</string>
    <string name="tooltip_ssn">We want to pay you! This is required for processing your payments.</string>
    <string name="tooltip_chef_service_fee"><![CDATA[The service fee goes toward helping us pay couriers, provide quality customer support & logistics, process payments, and other costs associated with running our service.]]></string>
    <string name="title_item_add_new_cooking_slot_text">Create cooking slot</string>
    <string name="email_app_not_found_error">E-mail app was not found</string>
    <string name="orders_dialog_title">Need to Cancel?</string>
    <string name="orders_dialog_description">We\'re here to help! We\'d love to save this order for you. Please contact support to continue.</string>
    <string name="orders_dialog_btn_text">Contact Support</string>


    <string-array name="custom_months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    //CookingSlotNewFlow
    <string name="go_to_review">Go to review</string>
    <string name="my_cooking_slot_menu">My cooking slot menu</string>
    <string name="save_cooking_slot">Save cooking slot</string>
    <string name="review_your_cooking_slot">Review your cooking slot</string>
    <string name="select_dishes_amp_add_quantities"><![CDATA[Select dishes & add quantities]]></string>
    <string name="more_options">More options</string>
    <string name="opening_time">Opening time</string>
    <string name="closing_time">Closing time</string>
    <string name="set_time">Set time</string>
    <string name="change">Change</string>
    <string name="last_call_for_order_explanation">Adding a last call for orders may impact your sales, as 50% of our order are placed on-demand.\n\nAfter this time, your cooking slot will no longer be visible to customers.</string>
    <string name="please_enter_operating_hours">Please enter operating hours</string>
    <string name="generic_error">An Error Occurred Please Try Again Later</string>
    <string name="by_category">By category</string>
    <string name="no_search_resuls">Nothing came up. Please try searching\nfor something else.</string>
    <string name="quantity">Quantity</string>
    <string name="selected_date_format" formatted="false">%s - %s</string>
    <string name="add_additional_dishes">Add additional dishes</string>
    <string name="slot_bottomsheet_action_edit">Edit</string>
    <string name="slot_bottomsheet_action_duplicate">Duplicate</string>
    <string name="slot_bottomsheet_action_delete">Delete</string>
    <string name="edit_cooking_slot">Edit cooking slot</string>
    <string name="create_cooking_slot">Create cooking slot</string>
    <string name="edit_cooking_slot_menu">Edit cooking slot menu</string>
    <string name="update_slot">Update cooking slot</string>
    <string name="menu_empty_error">Menu cannot be empty</string>
    <string name="quantity_zero_error">Dish quantity cannot be 0</string>
    <string name="last_call_for_orders_explanation">After the time selected, you\'ll no longer be able to collect new orders or be visible to customers.\n\nAdding the last call for orders may impact your sales, as 70% of our orders are on-demand.\n\nLast Call is optional and we recommend only using this feature sparingly.\n\nThe last call time you select will apply to the initial cooking slot and future recurring cooking slots, not just to a specific dish.</string>
    <string name="last_call_for_order">Last call for order</string>
    <string name="add_last_call_for_order">Add an optional last call</string>
    <string name="format_last_call_subtitle">"%s before your cooking slot ends"</string>
    <string name="tool_tip_last_call">Last call is only recommended for baked goods or large meals, most chefs won’t need to use this</string>
    <string name="title_warning_dialog">Warning</string>
    <string name="warning_title_bottom_sheet">We don’t recommend setting a last call for your cooking slot. After your last call, customers won’t be able to order from you.</string>
    <string name="warning_sub_description_bottom_sheet">Do you wish to continue?</string>
    <string name="action_continue">Continue</string>
    <string name="update_cooking_slot_title">Update cooking slot</string>
    <string name="update_cooking_slot_subject">For which cooking slots would you like to save the changes you made?</string>
    <string name="delete_cooking_slot_title">Delete cooking slot</string>
    <string name="delete_recurring_cooking_slot_subject">Which cooking slots would you like to delete?</string>
    <string name="delete_cooking_slot_subject">Are you sure you want to delete this cooking slot?</string>
    <string name="this_and_following">This and following</string>
    <string name="this_slot">This slot</string>
    <string name="order_food_packaging">Order food packaging</string>
    <string name="order_packaging_subject" formatted="false">WoodSpoon provides packaging for all your entrees and sides. This complimentary service is included in your 15% service fee. You’ll only cover the shipping cost. We work with SmartSource, a third party, to fulfill each packaging order and make the process seamless for you.\n\nTo order packaging, proceed with the following steps:\n\n1. Proceed to SmartSource’s website and locate the Products Page. Add any packaging you need to the cart (Don’t go overboard! WoodSpoon monitors every order) \n\n2. Login or Sign Up for a new account if it’s your first time.\n\n3. Checkout and enter your billing information. Your packaging will arrive in 5–7 business days. Important Make sure you enter your correct shipping and billing address.</string>

    //day of week
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="every">Every</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="ends_at">Ends at</string>
    <string name="search_for_dishes">Search for dishes</string>
    <string name="operating_hours_info_text">Please indicate the time you will actively be in your kitchen and available for a driver to pick up your food. We will try our best to make sure the pickup time of your first order is at least 30 minutes after your cooking start time.</string>
    <string name="operating_hours">Operating hours</string>
    <string name="make_slot_recurring">Make slot recurring</string>
    <string name="recurring_slot">Recurring slot</string>

    <plurals name="day_plurals">
        <item quantity="one">@string/day</item>
        <item quantity="other">@string/days</item>
    </plurals>

    <plurals name="week_plurals">
        <item quantity="one">@string/week</item>
        <item quantity="other">@string/weeks</item>
    </plurals>
</resources>
