<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/dishChooserDialogBkg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small"
        android:layout_marginEnd="@dimen/small"
        android:layout_marginBottom="@dimen/small"
        android:background="@drawable/media_chooser_dialog_bkg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            style="@style/LatoBlack15Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/big"
            android:paddingBottom="@dimen/big"
            android:text="@string/orders_dialog_title" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/SemiBold13Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/big"
            android:paddingRight="@dimen/big"
            android:text="@string/orders_dialog_description" />

        <com.bupp.wood_spoon_chef.presentation.custom_views.OrangeBtnCornered
            android:id="@+id/btn_save_slot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/small"
            android:paddingTop="@dimen/big"
            android:paddingRight="@dimen/small"
            android:paddingBottom="@dimen/small"
            app:title="@string/orders_dialog_btn_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
